--- a/package.json
+++ b/package.json
@@ -36,10 +36,18 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth/core": "^0.18.0",
+		"@auth/drizzle-adapter": "^0.3.5",
+		"@auth/sveltekit": "^0.3.11",
 		"@libsql/client": "^0.3.6",
+		"@lucia-auth/adapter-sqlite": "^2.0.1",
+		"@supabase/auth-helpers-sveltekit": "^0.10.7",
+		"@supabase/supabase-js": "^2.38.4",
 		"better-sqlite3": "^9.0.0",
+		"clerk-sveltekit": "^0.2.0",
 		"dotenv": "^16.3.1",
 		"drizzle-orm": "^0.28.6",
-		"drizzle-zod": "^0.5.1"
+		"drizzle-zod": "^0.5.1",
+		"lucia": "^2.7.3"
 	}
 }
