--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"@libsql/client": "^0.3.6",
 		"@lucia-auth/adapter-sqlite": "^2.0.1",
 		"@supabase/auth-helpers-sveltekit": "^0.10.7",
+		"@supabase/auth-ui-shared": "^0.1.8",
+		"@supabase/auth-ui-svelte": "^0.2.8",
 		"@supabase/supabase-js": "^2.38.4",
 		"better-sqlite3": "^9.0.0",
 		"clerk-sveltekit": "^0.2.0",
