--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"unplugin-icons": "^0.17.4",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
