--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"unplugin-icons": "^0.17.4",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
@@ -53,6 +52,7 @@
 		"dotenv": "^16.3.1",
 		"drizzle-orm": "^0.28.6",
 		"drizzle-zod": "^0.5.1",
-		"lucia": "^2.7.3"
+		"lucia": "^2.7.3",
+		"unplugin-icons": "^0.17.4"
 	}
 }
