--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"drizzle-orm": "^0.28.6",
 		"drizzle-zod": "^0.5.1",
 		"lucia": "^2.7.3",
+		"svelte-modals": "^1.3.0",
 		"unplugin-icons": "^0.17.4"
 	}
 }
