--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"drizzle-zod": "^0.5.1",
 		"lucia": "^2.7.3",
 		"svelte-modals": "^1.3.0",
+		"unique-names-generator": "^4.7.1",
 		"unplugin-icons": "^0.17.4"
 	}
 }
