--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"unplugin-icons": "workspace:*"
 	},
 	"type": "module",
 	"dependencies": {
