--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
 		"@auth/core": "^0.18.0",
 		"@auth/drizzle-adapter": "^0.3.5",
 		"@auth/sveltekit": "^0.3.11",
+		"@iconify-json/fa6-solid": "^1.1.20",
 		"@iconify-json/iconoir": "^1.1.36",
+		"@iconify-json/material-symbols": "^1.1.67",
 		"@libsql/client": "^0.3.6",
 		"@lucia-auth/adapter-sqlite": "^2.0.1",
 		"@supabase/auth-helpers-sveltekit": "^0.10.7",
@@ -54,6 +56,7 @@
 		"drizzle-orm": "^0.28.6",
 		"drizzle-zod": "^0.5.1",
 		"lucia": "^2.7.3",
+		"svelte-french-toast": "^1.2.0",
 		"svelte-modals": "^1.3.0",
 		"unique-names-generator": "^4.7.1",
 		"unplugin-icons": "^0.17.4"
