--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@auth/core": "^0.18.0",
 		"@auth/drizzle-adapter": "^0.3.5",
 		"@auth/sveltekit": "^0.3.11",
+		"@iconify-json/bi": "^1.1.22",
 		"@iconify-json/fa6-solid": "^1.1.20",
 		"@iconify-json/iconoir": "^1.1.36",
 		"@iconify-json/material-symbols": "^1.1.67",
