--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@iconify-json/fa6-solid": "^1.1.20",
 		"@iconify-json/iconoir": "^1.1.36",
 		"@iconify-json/material-symbols": "^1.1.67",
+		"@iconify-json/mdi": "^1.1.63",
 		"@libsql/client": "^0.3.6",
 		"@lucia-auth/adapter-sqlite": "^2.0.1",
 		"@supabase/auth-helpers-sveltekit": "^0.10.7",
@@ -59,6 +60,7 @@
 		"lucia": "^2.7.3",
 		"svelte-french-toast": "^1.2.0",
 		"svelte-modals": "^1.3.0",
+		"sveltejs-tippy": "^3.0.0",
 		"unique-names-generator": "^4.7.1",
 		"unplugin-icons": "^0.17.4"
 	}
