--- a/package.json
+++ b/package.json
@@ -54,8 +54,9 @@
 		"@supabase/supabase-js": "^2.38.4",
 		"better-sqlite3": "^9.0.0",
 		"clerk-sveltekit": "^0.2.0",
+		"dayjs": "^1.11.10",
 		"dotenv": "^16.3.1",
-		"drizzle-orm": "^0.28.6",
+		"drizzle-orm": "^0.30.1",
 		"drizzle-zod": "^0.5.1",
 		"lucia": "^2.7.3",
 		"svelte-french-toast": "^1.2.0",
