--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@iconify-json/bi": "^1.1.22",
 		"@iconify-json/fa6-solid": "^1.1.20",
 		"@iconify-json/iconoir": "^1.1.36",
+		"@iconify-json/lets-icons": "^1.1.2",
 		"@iconify-json/material-symbols": "^1.1.67",
 		"@iconify-json/mdi": "^1.1.63",
 		"@libsql/client": "^0.3.6",
