--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@supabase/auth-ui-svelte": "^0.2.8",
 		"@supabase/supabase-js": "^2.38.4",
 		"better-sqlite3": "^9.0.0",
+		"chart.js": "^4.4.3",
 		"clerk-sveltekit": "^0.2.0",
 		"dayjs": "^1.11.10",
 		"dotenv": "^16.3.1",
